fix(horizontalScroll) remove horizontal scrolling on mobile screen

--- a/src/scss/3-basics/_base.scss
+++ b/src/scss/3-basics/_base.scss
@@ -28,12 +28,13 @@
 }
 
 body {
+  overflow-x: hidden;
   background-color: white;
 }
 
 // !remove blue background in mobile screen
 a {
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: transparent !important;
 }
 ::selection {
   background-color: transparent;
