--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -384,7 +384,7 @@ body {
 }
 
 a {
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: transparent !important;
 }
 
 ::selection {
